# constexpr-phf

./: .gitmodules  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md  ctrie.hh  hashes.hh  mph.hh  phf.hh  tst-benchmark-frozen-unordered_set.cc  tst-benchmark-gperf.cc  tst-benchmark-hashes.h  tst-benchmark-mph-switch.cc  tst-benchmark-mph.cc  tst-benchmark-mph2.cc  tst-benchmark-names-gperf.h  tst-benchmark-names-gperf.in  tst-benchmark-names.h  tst-benchmark-names.in  tst-benchmark-phf-switch.cc  tst-benchmark-phf.cc  tst-benchmark-stop_words-table32.h  tst-benchmark-stop_words-table64.h  tst-benchmark-stop_words.cc  tst-benchmark-stop_words.h  tst-benchmark-stop_words.old.cc  tst-benchmark-switch.cc  tst-benchmark-titans-gperf.h  tst-benchmark-titans-gperf.in  tst-benchmark-titans.h  tst-benchmark-unordered_map.cc  tst-benchmark-unordered_set.cc  tst-phf.cc
bench/: bench.cc  compare.cc  dispatch_field_types.cc  dispatch_stop_words.cc  field_types.h  gperf_large.hpp  phf_dispatch.hh  tst-benchmark-stop_words-gperf.h  tst-benchmark-stop_words-gperf.in
examples/: demo.cc
test/: correctness.cc  test.cc
